# turboquant-vllm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  bench.py  bench_results_all_fixes_combined.json  bench_results_baseline.json  bench_results_final_config.json  bench_results_fix1_incremental_compress.json  bench_results_fix2_fp16_decode.json  bench_results_fix2_native_dtype_decode.json  bench_results_fix3_batch_kv_heads.json  bench_results_fix4_signs_fp16.json  bench_results_fix5_batch_val_decompress.json  bench_results_gpu_moe16_pf3_util90.json  bench_results_gpu_moe4_util80.json  bench_results_gpu_moe8_util85.json  pyproject.toml  serve.sh
.github/workflows/: ci.yml  publish.yml
examples/: run_inference.py  validate_model.py
src/turboquant/: __init__.py  _codebooks.py  compressor.py  kv_cache.py  lloyd_max.py  quantizer.py  rotation.py
src/turboquant/vllm_plugin/: __init__.py  codebook.py  compressor.py  config.py  decode_attention.py  patch.py  shadow_cache.py
tests/: conftest.py  test_core.py  test_kv_cache.py  test_lloyd_max.py  test_needle.py  test_quantizer.py  test_vllm_plugin.py
vllm_turboquant/: __init__.py  codebook.py  config.py  decode_attention.py  patch.py  shadow_cache.py  test_plugin.py
