[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.1.0"
description = "Two-stage vector quantization for LLM KV cache compression"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
vllm = ["vllm>=0.8"]
validate = ["transformers>=4.40", "accelerate>=0.25", "bitsandbytes>=0.43"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Repository = "https://github.com/BFinn/turboquant-vllm"

[project.entry-points."vllm.general_plugins"]
turboquant = "turboquant.vllm_plugin:install"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
